--- a/abstract/references.bib
+++ b/abstract/references.bib
@@ -1,19 +1,20 @@
 @misc{Salvador-2017,
+  author = {Salvador, Xavier-Laurent},
   title = {DE QUOI "numérique" EST-IL LE NOM DANS LA POLITIQUE DU MONDE MODERNE ?},
   howpublished = {\url{https://www.lemondemoderne.media/numerique-et-politique-monde-moderne/}},
-  note = {Accessed: 2019-03-30}
+  note = {Accessed: 2019-09-10}
 }
 
 @book{adams1995hitchhiker,
   title={The Hitchhiker's Guide to the Galaxy},
-  author={Adams, D.},
+  author={Adams, Daniel},
   isbn={9781417642595},
   url={http://books.google.com/books?id=W-xMPgAACAAJ},
   year={1995},
   publisher={San Val}
 }
 @ARTICLE{Crystal-2002, 
-author={D. {Crystal}}, 
+author={Crystal, David}, 
 journal={IEEE Transactions on Professional Communication}, 
 title={Language and the internet}, 
 year={2002}, 
